feat: add additional project

--- a/src/styles/components/_project.scss
+++ b/src/styles/components/_project.scss
@@ -247,7 +247,7 @@
     padding: 0 10px;
 }
 
-.raindrops-project {
+.calculator-project, .raindrops-project {
     align-self: flex-end;
 
     @include media-desktop {
